# skills-graph

./: .gitignore  README.md  me-kg.toml.example  pyproject.toml
me_kg/: cli.py  communities.py  config.py  git.py  index.py  schema.py  writer.py
me_kg/agent/: __init__.py  client.py  prompts.py
me_kg/extractors/: __init__.py  pdf.py  repo.py
notes/.obsidian/: workspace.json
notes/notes/: attention-is-all-you-need-notes.md  attention-is-all-you-need-topics.md  attention-is-all-you-need.md  mycellium-deployment-work.md  notebook-via-opencode-reading.md  reading-attention-is-all-you-need.md
notes/papers/: attention-is-all-you-need.md  react-paper.md  react-reasoning-acting.md  self-consistency.md
notes/projects/: issue-radar.md
skills/updategraph/: SKILL.md
