[project]
name = "me-kg"
version = "0.1.0"
description = "Personal knowledge graph: sources → agent → typed-edge markdown vault"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2.7",
  "pyyaml>=6",
  "httpx>=0.27",
  "pymupdf>=1.24",
  "tomli-w>=1.0",
  "networkx>=3.3",
  "python-louvain>=0.16",
]
optional-dependencies = { ocr = ["pytesseract>=0.3.1"] }

[project.scripts]
me-kg = "me_kg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["me_kg"]